Fix overlaping product titles on mobile
Add an `extra-loose` line-height so it prevents
produt title to overlap on mobile screens.

--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -101,7 +101,7 @@
 }
 
 .productTitle {
-  @apply pt-2 max-w-full w-full;
+  @apply max-w-full w-full;
   font-size: 2rem;
   letter-spacing: 0.4px;
 
